<resources>
    <string name="app_name">Final Assignment Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start Quiz</string>

    <string name="gamerule">Game Rules</string>

    <string name="rule1">Quiz Contains 10 Questions</string>
    <string name="rule2">Each Question have equal marks</string>
    <string name="rule3">Time limit to complete the Quiz is 10 minutes</string>
    <string name="rule4">Contains all questions from english</string>
    <string name="rule5">Please Attempt All Questions</string>
    <string name="rule6">Press START QUIZ button to start </string>
    <string name="submit">Submit</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>
    <string name="total_correct_question">Total Correct Question</string>
    <string name="time_taken">Time taken</string>
    <string name="total_question">Total Question</string>
    <string name="_10">10</string>
    <string name="your_report">Your Report</string>
</resources>