<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#9B75D1"
    tools:context=".SetupScreen">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#021B45"
        android:minHeight="48dp"
        android:background="#4CCF27"
        android:text="@string/gamerule"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        style="@style/CustomTextStyle"
        android:text="@string/rule1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        style="@style/CustomTextStyle"
        android:text="@string/rule2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text3"
        style="@style/CustomTextStyle"
        android:text="@string/rule3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text4"
        style="@style/CustomTextStyle"
        android:text="@string/rule4"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text5"
        style="@style/CustomTextStyle"
        android:text="@string/rule5"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/start"
        android:background="#39C618"
        android:text="@string/start"/>


</LinearLayout>