<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#BCF435"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#18FFFF"
    tools:context=".QuestionDetailScreen">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">

        
        <Button
            android:layout_marginStart="15dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/submit"
            android:id="@+id/submit"/>
        
        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/timer1"/>
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="110dp"
        android:id="@+id/questiondetail"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:padding="10dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:id="@+id/rediogroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="24sp"
            android:id="@+id/optionA"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="24sp"
            android:id="@+id/optionB"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="24sp"
            android:id="@+id/optionC"
            />

        <RadioButton
            android:id="@+id/optionD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:minHeight="48dp" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"

        android:orientation="horizontal">

        <Button
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/prev"
            android:id="@+id/prev"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:id="@+id/next"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Bookmark"
            android:layout_marginStart="50dp"
            android:id="@+id/book"/>


    </LinearLayout>

</LinearLayout>
</ScrollView>